--- a/templates/index.html
+++ b/templates/index.html
@@ -8,34 +8,88 @@
     <title>Угадай слово</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+
+            // define global vars
+            var level = 2; // default level is medium
+
+            // define functions
+            function GetNextWord() {
+                let xhr = new XMLHttpRequest();
+                xhr.open("GET", "/next/" + level);
+                xhr.send();
+
+                xhr.onload = function () {
+                    if (xhr.status != 200) {
+                        alert(`Ошибка ${xhr.status}: ${xhr.statusText}`);
+                    } else {
+                        var jsonResponse = JSON.parse(xhr.responseText);
+                        document.getElementById("scramble").innerHTML = jsonResponse.scramble;
+                        document.getElementById("word").innerHTML = jsonResponse.word;
+                    }
+                };
+            }
+
+            function SetLevelEasy() { level = 1; }
+            function SetLevelMedium() { level = 2; }
+            function SetLevelHard() { level = 3; }
+
+            // assign handlers
+            document.getElementById("next").onclick = GetNextWord;
+            document.getElementById("btnradio1").onclick = SetLevelEasy;
+            document.getElementById("btnradio2").onclick = SetLevelMedium;
+            document.getElementById("btnradio3").onclick = SetLevelHard;
+
+        });
+
+    </script>
 </head>
 
 <body>
-    <div class="container">
+    <div class="container pt-1">
+
+        <div class="row text-center align-items-center">
+            <div class="col-sm"></div>
+            <div class="col-sm">
+                <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
+                    <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off">
+                    <label class="btn btn-outline-primary" for="btnradio1">Легко</label>
+
+                    <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off" checked>
+                    <label class="btn btn-outline-primary" for="btnradio2">Средне</label>
+
+                    <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
+                    <label class="btn btn-outline-primary" for="btnradio3">Сложно</label>
+                </div>
+            </div>
+            <div class="col-sm"></div>
+        </div>
+
         <div class="row text-center align-items-center">
             <div class="col-sm">
-                <a href="/" class="btn btn-info">Next word</a>
+                <button id="next" class="btn btn-primary">Cледующее слово</button>
             </div>
             <div class="col-sm">
-                <h1 class="display-1">{{ result.scramble }}</h1>
+                <h1 id="scramble" class="display-1">{{ result.scramble }}</h1>
             </div>
             <div class="col-sm">
-                <button class="btn btn-info" data-bs-toggle="modal" data-bs-target="#exampleModal">Show
-                    answer</button>
+                <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#answerModal">Показать
+                    ответ</button>
             </div>
         </div>
     </div>
 
     <!-- Modal -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="answerModal" tabindex="-1" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">And the answer is ...</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <h5 class="modal-title">Правильный ответ ...</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                 </div>
                 <div class="modal-body">
-                    <h1 class="display-1">{{ result.word }}</h1>
+                    <h1 id="word" class="display-1">{{ result.word }}</h1>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
