--- a/templates/index.html
+++ b/templates/index.html
@@ -49,7 +49,7 @@
 <body>
     <div class="container pt-1">
 
-        <div class="row text-center align-items-center">
+        <div class="row text-center align-items-center pt-1">
             <div class="col-sm"></div>
             <div class="col-sm">
                 <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
@@ -66,7 +66,7 @@
             <div class="col-sm"></div>
         </div>
 
-        <div class="row text-center align-items-center">
+        <div class="row text-center align-items-center pt-1">
             <div class="col-sm">
                 <button id="next" class="btn btn-primary">Cледующее слово</button>
             </div>
