--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Угадай слово</title>
-    <link href="{{ url_for('static', filename='css/styles.pure.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
     <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
